--- a/my.css
+++ b/my.css
@@ -360,6 +360,11 @@ span {
     font-size: 1.6rem;
     margin: 1rem 0 2rem;
 }
+.about-content li{
+    font-size: 1.6rem;
+    margin: 1rem 0 2rem;
+    
+}
 .about-content .text-animation span::before{
     content:'Web Developer';
     color:var(--main-color);
@@ -394,10 +399,44 @@ span {
 .service-box{
     background-color: var(--main-color);
     color: black;
-    height: 200px;
+    height: 250px;
+    padding: 2rem;
     border-radius: 3rem;
     cursor: pointer;
     transition: 0.3s ease-in-out;
+
+}
+.service-boxk{
+    background-color: var(--main-color);
+    color: black;
+    height: 270px;
+    padding: 2rem;
+    border-radius: 3rem;
+    cursor: pointer;
+    transition: 0.3s ease-in-out;
+
+}
+.service-boxk h4{
+    font-size: 2rem;
+    font-weight: 700;
+    margin-bottom: 1rem;
+}
+.service-boxk p{
+    
+    font-size: 1.6rem;
+    font-weight: 400;
+    
+}
+.service-boxk li{
+    
+    font-size: 1.6rem;
+    font-weight: 400;
+}
+
+.service-boxk:hover{
+    background: var(--bg-color);
+    color: var(--main-color);
+    transform: scale(1.03);
 
 }
 .service-box:hover{
@@ -415,8 +454,9 @@ span {
     align-items: baseline;
     padding: 5rem;
 }
+
 .service-info h4{
-    font-size: 2.5rem;
+    font-size: 2rem;
     font-weight: 500;
     margin-bottom: 1rem;
 }
@@ -463,99 +503,92 @@ span {
 .copyright span{
     color: white;
 }
-@media(max-width:1285px){html 
-{ font-size: 55%;
+@media only screen and (max-width: 1285px) {
+    html {
+        font-size: 55%;
+    }
+    .services-container {
+        padding-bottom: 7rem;
+        grid-template-columns: repeat(2, 1fr);
+        margin: 0 5rem;
+    }
 }
-.services-container{
-    padding-bottom: 7rem;
-    grid-template-columns: repeat(2,1fr);
-    margin: 0 5rem;
-}
-}
-@media(max-width:991px){
-    header{
-        padding: 2rem 3%;
-}
-section{
-    padding: 10rem 3% 2rem;
-}
-.services{
-    padding-bottom: 7rem;
 
+@media only screen and (max-width: 991px) {
+    header {
+        padding: 2rem 3%;
+    }
+    section {
+        padding: 10rem 3% 2rem;
+    }
+    .services {
+        padding-bottom: 7rem;
+    }
+    .footer {
+        padding: 2rem 3%;
+    }
 }
-.footer{
-    padding: 2rem 3%;
-}
-}
-@media(max-width: 895px){
-    #menu-icon{
+
+@media only screen and (max-width: 895px) {
+    #menu-icon {
         display: block;
     }
-    
-    .navbar{
+    .navbar {
         position: absolute;
         top: 100%;
         right: 0;
         width: 50%;
         padding: 1rem 3%;
-        background: rgba(0 0 0 .9);
+        background: rgba(0, 0, 0, 0.9);
         backdrop-filter: blur(20px);
         border-bottom-left-radius: 2rem;
         border-left: 2px solid var(--main-color);
         border-bottom: 2px solid var(--main-color);
         display: none;
     }
-    .navbar.action{
+    .navbar.action {
         display: block;
-
     }
-    .navbar a{
+    .navbar a {
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
         color: white;
     }
-    .home{
+    .home {
         flex-direction: column;
         margin: 5rem 4rem;
     }
-    .home-content h3{
+    .home-content h3 {
         font-size: 8rem;
-
     }
-    .home-content h1{
-        font-size:8rem;
+    .home-content h1 {
+        font-size: 8rem;
         margin-top: 3rem;
-
     }
-    .home-content p{
+    .home-content p {
         max-width: 600px;
         margin-top: 0 auto;
-        
     }
-    .home-img{
+    .home-img {
         width: 56vw;
         margin-top: -2rem;
-
-
     }
-    .about{
+    .about {
         flex-direction: column-reverse;
     }
-    .about-content{
+    .about-content {
         margin: 0 2rem 4rem;
-        
     }
-    .about img{
+    .about img {
         width: 52vw;
         margin-top: 1rem;
         margin-bottom: 3rem;
     }
-    .services h2{
+    .services h2 {
         margin-bottom: 3rem;
     }
-    .services-container{
-        grid-template-columns: repeat(1,1fr);
+    .services-container {
+        grid-template-columns: repeat(1, 1fr);
     }
-
 }
