--- a/my.css
+++ b/my.css
@@ -503,92 +503,99 @@ span {
 .copyright span{
     color: white;
 }
-@media only screen and (max-width: 1285px) {
-    html {
-        font-size: 55%;
+@media(max-width:1285px){html 
+    { font-size: 55%;
     }
-    .services-container {
+    .services-container{
         padding-bottom: 7rem;
-        grid-template-columns: repeat(2, 1fr);
+        grid-template-columns: repeat(2,1fr);
         margin: 0 5rem;
     }
-}
-
-@media only screen and (max-width: 991px) {
-    header {
-        padding: 2rem 3%;
     }
-    section {
+    @media(max-width:991px){
+        header{
+            padding: 2rem 3%;
+    }
+    section{
         padding: 10rem 3% 2rem;
     }
-    .services {
+    .services{
         padding-bottom: 7rem;
+    
     }
-    .footer {
+    .footer{
         padding: 2rem 3%;
     }
-}
-
-@media only screen and (max-width: 895px) {
-    #menu-icon {
-        display: block;
     }
-    .navbar {
-        position: absolute;
-        top: 100%;
-        right: 0;
-        width: 50%;
-        padding: 1rem 3%;
-        background: rgba(0, 0, 0, 0.9);
-        backdrop-filter: blur(20px);
-        border-bottom-left-radius: 2rem;
-        border-left: 2px solid var(--main-color);
-        border-bottom: 2px solid var(--main-color);
-        display: none;
+    @media(max-width: 895px){
+        #menu-icon{
+            display: block;
+        }
+        
+        .navbar{
+            position: absolute;
+            top: 100%;
+            right: 0;
+            width: 50%;
+            padding: 1rem 3%;
+            background: rgba(0 0 0 .9);
+            backdrop-filter: blur(20px);
+            border-bottom-left-radius: 2rem;
+            border-left: 2px solid var(--main-color);
+            border-bottom: 2px solid var(--main-color);
+            display: none;
+        }
+        .navbar.action{
+            display: block;
+    
+        }
+        .navbar a{
+            display: block;
+            font-size: 2rem;
+            margin: 3rem 0;
+            color: white;
+        }
+        .home{
+            flex-direction: column;
+            margin: 5rem 4rem;
+        }
+        .home-content h3{
+            font-size: 8rem;
+    
+        }
+        .home-content h1{
+            font-size:8rem;
+            margin-top: 3rem;
+    
+        }
+        .home-content p{
+            max-width: 600px;
+            margin-top: 0 auto;
+            
+        }
+        .home-img{
+            width: 56vw;
+            margin-top: -2rem;
+    
+    
+        }
+        .about{
+            flex-direction: column-reverse;
+        }
+        .about-content{
+            margin: 0 2rem 4rem;
+            
+        }
+        .about img{
+            width: 52vw;
+            margin-top: 1rem;
+            margin-bottom: 3rem;
+        }
+        .services h2{
+            margin-bottom: 3rem;
+        }
+        .services-container{
+            grid-template-columns: repeat(1,1fr);
+        }
+    
     }
-    .navbar.action {
-        display: block;
-    }
-    .navbar a {
-        display: block;
-        font-size: 2rem;
-        margin: 3rem 0;
-        color: white;
-    }
-    .home {
-        flex-direction: column;
-        margin: 5rem 4rem;
-    }
-    .home-content h3 {
-        font-size: 8rem;
-    }
-    .home-content h1 {
-        font-size: 8rem;
-        margin-top: 3rem;
-    }
-    .home-content p {
-        max-width: 600px;
-        margin-top: 0 auto;
-    }
-    .home-img {
-        width: 56vw;
-        margin-top: -2rem;
-    }
-    .about {
-        flex-direction: column-reverse;
-    }
-    .about-content {
-        margin: 0 2rem 4rem;
-    }
-    .about img {
-        width: 52vw;
-        margin-top: 1rem;
-        margin-bottom: 3rem;
-    }
-    .services h2 {
-        margin-bottom: 3rem;
-    }
-    .services-container {
-        grid-template-columns: repeat(1, 1fr);
-    }
-}
